# authhero

./: .gitignore  README.md  app.py  pyproject.toml
authhero/: api.py  factories.py  settings.py
authhero/health/: views.py
scripts/: init_local_db.py
src/: app.py
src/authhero/: extensions.py  factories.py  forms.py  models.py  settings.py
src/authhero/apis/: health.py
src/authhero/auth/: __init__.py  forms.py  services.py  views.py
src/authhero/health/: views.py
src/authhero/users/: forms.py  services.py  views.py
src/authhero/views/: health.py  users.py
src/migrations/: alembic.ini
src/migrations/versions/: 4ae3780287f8_.py  656984b8fb60_.py
tests/: conftest.py
tests/functional/: test_health.py  test_users.py
tests/functional/health/: test_views.py
tests/unit/: test_extensions.py
tests/unit/auth/: test_services.py
