[tool.poetry]
name = "authhero"
version = "0.1.0"
description = "A sample authentication service."
authors = ["Nikola Rankovic <kibernick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.1"
flask-restx = "^0.5.1"
SQLAlchemy = "^1.4.25"
Flask-SQLAlchemy = "^2.5.1"
psycopg2 = "^2.9.1"
Flask-Migrate = "^3.1.0"
python-dateutil = "^2.8.2"  # needed for timezone support

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
